--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -25,7 +25,9 @@ input {
   height: 2.4rem;
   padding: 0 1rem;
   border-radius: 10rem;
-  border-color: darkcyan;
+  background-color: rgb(245, 235, 220);
+  border-color: black;
+  box-shadow: 0.3rem 0.3rem 0 0 black;
 }
 
 textarea {
