add chat page logic

--- a/frontend/src/pages/AgentPortal/AgentPortal.css
+++ b/frontend/src/pages/AgentPortal/AgentPortal.css
@@ -1,9 +1,22 @@
 .agent-portal {
     padding: 2rem;
+    display: flex;
+    flex-direction: row;
+}
+
+.left-panel {
+    width: 60%;
+    margin-left: 2rem;
+}
+
+.right-panel {
+    width: 40%;
+    padding-left: 4rem;
+    border-left: 1px solid black;
 }
 
 .issue-container {
-    width: 50%;
+    width:  90%;
     padding: 1rem;
     margin: 1rem 0;
     border-radius: 1rem;
@@ -18,6 +31,13 @@
     align-items: center;
 }
 
+.claim {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
 span {
     margin-left: 2rem;
     padding: .625rem;
@@ -25,4 +45,14 @@ span {
     border-radius: 2rem;
     border: 2px solid black;
     box-shadow: 0.1rem 0.1rem 0 0 black;
+}
+
+.thread-container {
+    width:  70%;
+    padding: 1rem;
+    margin: 1rem 0;
+    border-radius: 1rem;
+    background-color: rgb(127, 229, 255);
+    border: 2px solid black;
+    box-shadow: 0.3rem 0.3rem 0 0 black;
 }
