--- a/frontend/src/pages/Chats/Chats.css
+++ b/frontend/src/pages/Chats/Chats.css
@@ -13,6 +13,8 @@
     padding: 4rem 0 4rem 4rem;
     border-right: 1px solid black;
     overflow: scroll;
+    display: flex;
+    flex-direction: column;
 }
 
 .left-chat-panel {
@@ -54,4 +56,9 @@
     margin: 0 0 1rem 0;
     background-color: white;
     border-radius: 10px;
+}
+
+.top {
+    margin-bottom: 1rem;
+    border-bottom: 1px solid black;
 }
